--- a/sass/navigation/_links.scss
+++ b/sass/navigation/_links.scss
@@ -95,7 +95,7 @@ h5 a {
 .edit-link a {
 	position: fixed;
 	top: 8rem;
-	left: 0;
+	right: 0;
 	background: $color__brand-orange;
 	color: #FFF!important;
 	padding: 2rem;
